feat: add mobile-header

--- a/pages/reg-menu-example.html
+++ b/pages/reg-menu-example.html
@@ -22,13 +22,16 @@
   <body class="root">
     <div class="menu_is-mobile">
       <div class="mobile-header">
-        <a href="/" class="link header__logo-container">
-          <span class="logo-title"
+        <a href="/" class="link header__logo-container mobile-heade__logo">
+          <span class="logo-title logo-title_pos_header"
             >SMM<span class="logo-accent">PRIME</span></span
+          >
+          <span class="header__logo-subtitle"
+            >с 2017 года помогаем продвигаться в соцсетях</span
           >
         </a>
         <a class="title5 mobile-header__link" href="/addfunds"
-          >867.12 &#8381;</a
+          >123.123 &#8381;</a
         >
       </div>
       <nav class="reg-menu">
