--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -485,18 +485,19 @@
             </div>
             <div class="servculc__wrapper servculc__wrapper_type_count">
               <h3 class="servculc__subtitle">Количество</h3>
-              <p class="servculc__count">100000 шт.</p>
+              <!-- <p class="servculc__count">100000 шт.</p> -->
+              <input class="servculc__count" type="number" min="0" max="200000">
               <input
                 type="range"
-                min="1"
-                max="1000000"
-                value="100000"
+                min="0"
+                max="200000"
+                value="0"
                 id="range2"
                 class="servculc__range"
               />
               <div class="servculc__range-caption-container">
-                <span class="servculc__range-caption">1 шт</span>
-                <span class="servculc__range-caption">1 млн. шт.</span>
+                <span class="servculc__range-caption">0 шт</span>
+                <span class="servculc__range-caption">200 тыс. шт</span>
               </div>
               <div class="servculc__cost-container">
                 <p class="servculc__price">
