--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -486,7 +486,12 @@
             <div class="servculc__wrapper servculc__wrapper_type_count">
               <h3 class="servculc__subtitle">Количество</h3>
               <!-- <p class="servculc__count">100000 шт.</p> -->
-              <input class="servculc__count" type="number" min="0" max="200000">
+              <input
+                class="servculc__count"
+                type="number"
+                min="0"
+                maxlength="6"
+              />
               <input
                 type="range"
                 min="0"
