--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -8,15 +8,15 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="../dist/base.bf62d887ffeebbe2edd0.v2.css" />
-    <link rel="stylesheet" href="../dist/social.602229dacdbe52dda217.v1.css" />
+    <link rel="stylesheet" href="../dist/social.e2cf820d8f37e8db4d42.css" />
     <script type="module" src="../scripts/pages/social.js"></script>
     <script type="module" src="../scripts/pages/telegram.v6.js"></script>
 
     <link rel="stylesheet" href="../style/common.v2.css" />
     <link rel="stylesheet" href="../style/servculc.css" />
-    <link rel="stylesheet" href="../style/culcwithadv.css" />
+    <link rel="stylesheet" href="../style/service-grid.css" />
     <script defer src="../dist/base.bf62d887ffeebbe2edd0.v1.js"></script>
-    <script type="module" src="../scripts/components/ServCulc.js"></script>
+    <script defer src="../dist/culc.e2cf820d8f37e8db4d42.js"></script>
     <title>Телеграм</title>
   </head>
 
@@ -404,6 +404,55 @@
               при заказе от 10.000 рублей
             </p>
           </div>
+        </div>
+      </section>
+      <section class="service-grid">
+        <h2 class="service-grid__title">Накрутка Телеграм</h2>
+        <div class="service-grid__container">
+          <h3 class="service-grid__subtitle">Разовые</h3>
+          <p class="service-grid__text">Разовые задачи на уже выпущенные посты</p>
+          <ul class="list service-grid__list">
+            <li class="service-grid__item">
+              <a class="link service-grid__link" href="/">
+                <div class="service-grid__icon-container">
+                  <img class="service-grid__icon" src="../images/services/autolikes-icon.svg" alt="">
+                </div>
+                <h4 class="service-grid__item-title">Реакции</h4>
+                <p class="service-grid__item-text">Накрутка реакций на постах</p>
+                <p class="service-grid__item-cost">0.012 руб</p>
+              </a>
+            </li>
+            <li class="service-grid__item">
+              <a class="link service-grid__link" href="/">
+                <div class="service-grid__icon-container">
+                  <img class="service-grid__icon" src="../images/services/friends-icon.svg" alt="">
+                </div>
+                <h4 class="service-grid__item-title">Подписчики</h4>
+                <p class="service-grid__item-text">Качественные подписчикидля вашего канала или группы</p>
+                <p class="service-grid__item-cost">0.09 руб</p>
+              </a>
+            </li>
+            <li class="service-grid__item">
+              <a class="link service-grid__link" href="/">
+                <div class="service-grid__icon-container">
+                  <img class="service-grid__icon" src="../images/services/views-icon.svg" alt="">
+                </div>
+                <h4 class="service-grid__item-title">Просмотры</h4>
+                <p class="service-grid__item-text">Просмотры отрусскоязычных пользователей на любой пост или подписка на новые записи</p>
+                <p class="service-grid__item-cost">0.0012 руб</p>
+              </a>
+            </li>
+            <li class="service-grid__item">
+              <a class="link service-grid__link" href="/">
+                <div class="service-grid__icon-container">
+                  <img class="service-grid__icon" src="../images/services/polls-icon.svg" alt="">
+                </div>
+                <h4 class="service-grid__item-title">Голосование</h4>
+                <p class="service-grid__item-text">Поднимайте активность голосованиями и лайками</p>
+                <p class="service-grid__item-cost">0.05 руб</p>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="culcwithadv">
