add download-app block

--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -14,6 +14,9 @@
 
     <link rel="stylesheet" href="../style/common.v2.css" />
     <link rel="stylesheet" href="../style/servculc.css" />
+
+    <link rel="stylesheet" href="../style/download-app.css" />
+
     <link rel="stylesheet" href="../style/service-grid.css" />
     <script defer src="../dist/base.bf62d887ffeebbe2edd0.v1.js"></script>
     <script defer src="../dist/culc.e2cf820d8f37e8db4d42.js"></script>
@@ -347,6 +350,55 @@
           бесплатно докрутим, если кто-то отпишется в течение 30 дней
         </p>
       </section>
+      <section class="download-app">
+        <div class="download-app__wrapper">
+          <div class="download-app__inner download-app__inner_with-text">
+            <h2 class="title-2 download-app__title">
+              Мобильное приложение smmprime.com
+            </h2>
+            <p class="text-1 download-app__text">
+              Можно пользоваться не только сайтом, но и мобильным приложением -
+              это удобно!
+            </p>
+            <div class="download-app__links">
+              <a href="/" class="download-app__link">
+                <img
+                  class="download-app__link-icon"
+                  src="../images/download-app/android-green.svg"
+                  alt="Андроид"
+                />
+                <p class="download-app__link-text">
+                  Загрузить на
+                  <span class="download-app__link-accent">Android</span>
+                </p>
+              </a>
+              <a href="/" class="download-app__link">
+                <img
+                  class="download-app__link-icon"
+                  src="../images/download-app/ios.svg"
+                  alt="Ios"
+                />
+                <p class="download-app__link-text">
+                  Загрузить на
+                  <span class="download-app__link-accent">IOS</span>
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="download-app__inner download-app__inner_with-img">
+            <picture class="download-app__img">
+              <source
+                srcset="../images/download-app/app-devices-desktop.png"
+                media="(min-width: 600px)"
+              />
+              <img
+                src="../images/download-app/app-devices-mobile.png"
+                alt="Телефоны"
+              />
+            </picture>
+          </div>
+        </div>
+      </section>
       <section class="optimization optimization_role_social">
         <div class="optimization__description">
           <h2
@@ -410,45 +462,72 @@
         <h2 class="service-grid__title">Накрутка Телеграм</h2>
         <div class="service-grid__container">
           <h3 class="service-grid__subtitle">Разовые</h3>
-          <p class="service-grid__text">Разовые задачи на уже выпущенные посты</p>
+          <p class="service-grid__text">
+            Разовые задачи на уже выпущенные посты
+          </p>
           <ul class="list service-grid__list">
             <li class="service-grid__item">
               <a class="link service-grid__link" href="/">
                 <div class="service-grid__icon-container">
-                  <img class="service-grid__icon" src="../images/services/autolikes-icon.svg" alt="">
+                  <img
+                    class="service-grid__icon"
+                    src="../images/services/autolikes-icon.svg"
+                    alt=""
+                  />
                 </div>
                 <h4 class="service-grid__item-title">Реакции</h4>
-                <p class="service-grid__item-text">Накрутка реакций на постах</p>
+                <p class="service-grid__item-text">
+                  Накрутка реакций на постах
+                </p>
                 <p class="service-grid__item-cost">0.012 руб</p>
               </a>
             </li>
             <li class="service-grid__item">
               <a class="link service-grid__link" href="/">
                 <div class="service-grid__icon-container">
-                  <img class="service-grid__icon" src="../images/services/friends-icon.svg" alt="">
+                  <img
+                    class="service-grid__icon"
+                    src="../images/services/friends-icon.svg"
+                    alt=""
+                  />
                 </div>
                 <h4 class="service-grid__item-title">Подписчики</h4>
-                <p class="service-grid__item-text">Качественные подписчикидля вашего канала или группы</p>
+                <p class="service-grid__item-text">
+                  Качественные подписчикидля вашего канала или группы
+                </p>
                 <p class="service-grid__item-cost">0.09 руб</p>
               </a>
             </li>
             <li class="service-grid__item">
               <a class="link service-grid__link" href="/">
                 <div class="service-grid__icon-container">
-                  <img class="service-grid__icon" src="../images/services/views-icon.svg" alt="">
+                  <img
+                    class="service-grid__icon"
+                    src="../images/services/views-icon.svg"
+                    alt=""
+                  />
                 </div>
                 <h4 class="service-grid__item-title">Просмотры</h4>
-                <p class="service-grid__item-text">Просмотры отрусскоязычных пользователей на любой пост или подписка на новые записи</p>
+                <p class="service-grid__item-text">
+                  Просмотры отрусскоязычных пользователей на любой пост или
+                  подписка на новые записи
+                </p>
                 <p class="service-grid__item-cost">0.0012 руб</p>
               </a>
             </li>
             <li class="service-grid__item">
               <a class="link service-grid__link" href="/">
                 <div class="service-grid__icon-container">
-                  <img class="service-grid__icon" src="../images/services/polls-icon.svg" alt="">
+                  <img
+                    class="service-grid__icon"
+                    src="../images/services/polls-icon.svg"
+                    alt=""
+                  />
                 </div>
                 <h4 class="service-grid__item-title">Голосование</h4>
-                <p class="service-grid__item-text">Поднимайте активность голосованиями и лайками</p>
+                <p class="service-grid__item-text">
+                  Поднимайте активность голосованиями и лайками
+                </p>
                 <p class="service-grid__item-cost">0.05 руб</p>
               </a>
             </li>
