add tg-bot block

--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -7,8 +7,8 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../dist/base.bf62d887ffeebbe2edd0.v2.css" />
-    <link rel="stylesheet" href="../dist/social.e2cf820d8f37e8db4d42.css" />
+    <link rel="stylesheet" href="../dist/base.2c3b15beaf05c0440ad4.css" />
+    <link rel="stylesheet" href="../dist/social.2c3b15beaf05c0440ad4.css" />
     <script type="module" src="../scripts/pages/social.js"></script>
     <script type="module" src="../scripts/pages/telegram.v6.js"></script>
 
@@ -16,10 +16,11 @@
     <link rel="stylesheet" href="../style/servculc.css" />
 
     <link rel="stylesheet" href="../style/download-app.css" />
+    <link rel="stylesheet" href="../style/tg-bot.css" />
 
     <link rel="stylesheet" href="../style/service-grid.css" />
     <script defer src="../dist/base.bf62d887ffeebbe2edd0.v1.js"></script>
-    <script defer src="../dist/culc.e2cf820d8f37e8db4d42.js"></script>
+    <script defer src="../dist/culc.2c3b15beaf05c0440ad4.js"></script>
     <title>Телеграм</title>
   </head>
 
@@ -397,6 +398,20 @@
               />
             </picture>
           </div>
+        </div>
+      </section>
+      <section class="tg-bot">
+        <div class="tg-bot__wrapper">
+          <h2 class="title-2 tg-bot__title">
+            Оформляйте заказы без лишних усилий - прямо в Telegram!
+          </h2>
+          <p class="text-1 tg-bot__text">
+            Мы представляем нашего нового помощника - Telegram бот, который
+            позволит вам оформлять заказы быстрее и проще.
+          </p>
+          <a href="/" class="btn btn_size_large btn_color_light-orange"
+            >Попробовать</a
+          >
         </div>
       </section>
       <section class="optimization optimization_role_social">
